include signup and login page

--- a/partials/dashboard.html
+++ b/partials/dashboard.html
@@ -1,1 +1,9 @@
-{{data.status}}
+<section>
+  <h1> The temperature is: {{data.fahrenheit}}</h1>
+</section>
+<section>
+  <h1> The doors are: {{data2.doors}} </h1>
+</section>
+<section>
+  <h1> The light is: {{data3.value}} </h1>
+</section>
