adding basic styling to index and home view

--- a/partials/home.html
+++ b/partials/home.html
@@ -1,2 +1,7 @@
-<a href='#/home/login'><h1> Login </h1></a>
-<a href='#/home/signup'><h1> Signup </h1></a>
+<div class="home">
+  <section class="description">
+    <p>Description of company/app</p>
+  </section>
+  <a href='#/home/login'><h2> Login </h2></a>
+  <a href='#/home/signup'><h2> Signup </h2></a>
+</div>
