--- a/partials/signup.html
+++ b/partials/signup.html
@@ -1,6 +1,5 @@
 <h1>Signup Page</h1>
 
-
 <form novalidate name='addNewuser' ng-submit='addUser(view.form)'>
   <label for='username'> Username </label>
   <input type="text" ng-model='view.form.username' placeholder='username'>
@@ -12,7 +11,7 @@
 </form>
 
 
-{{view.form}}
+<!-- {{view.form}} -->
 
-<h3> Fake user database </h3>
-<p>{{users}}</p>
+<!-- <h3> Fake user database </h3>
+<p>{{users}}</p> -->
