--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,6 +1,9 @@
 @import "https://fonts.googleapis.com/css?family=Roboto+Mono";
-html {
+* {
   box-sizing: border-box; }
+
+html {
+  background-color: #072638; }
 
 header {
   display: flex;
@@ -20,7 +23,7 @@ nav {
   nav .brand {
     display: flex;
     align-items: center;
-    margin: 0.5vw; }
+    margin: 0.5vw 0.5vw 0.5vw 0; }
     nav .brand .logo {
       height: 5vw;
       width: 5vw; }
@@ -62,7 +65,7 @@ main {
     width: 30%;
     color: #2e3e42;
     background-color: #fafafa;
-    margin: 1vw 0;
+    margin: 0 0 2vw 0;
     border: 10px #fafafa solid; }
     .home form input, .home form button {
       margin-bottom: 1vw; }
@@ -76,7 +79,12 @@ main {
         color: black;
         background-color: #36bcd0; }
   .home .description {
-    width: 80%; }
+    width: 100%;
+    color: #2e3e42;
+    background-color: #fafafa;
+    padding: 1vw;
+    margin: 0 0 5vw 0;
+    border: 10px #fafafa solid; }
 
 .btns {
   display: flex;
@@ -87,7 +95,7 @@ main {
     background-color: #30638e;
     width: 200px;
     padding: 20px;
-    margin: 20px;
+    margin: 2vw 1vw;
     font-size: 20px;
     font-family: 'Roboto Mono', monospace;
     font-weight: bold;
@@ -95,15 +103,5 @@ main {
     .btns .bigbtn:hover {
       color: black;
       background-color: #36bcd0; }
-
-section {
-  width: 20%;
-  color: #2e3e42;
-  background-color: #fafafa;
-  padding: 1vw;
-  margin: 2vw 0;
-  border: 10px #fafafa solid; }
-  section .alert {
-    border: 10px #d13a4e solid; }
 
 /*# sourceMappingURL=main.css.map */
