--- a/public/css/sass/main.scss
+++ b/public/css/sass/main.scss
@@ -2,8 +2,12 @@
 @import "colors";
 @import "font";
 
-html{
+*{
   box-sizing: border-box;
+}
+
+html{
+  background-color: $darkblue;
 }
 
 header{
@@ -20,7 +24,7 @@ nav{
   .brand{
     display: flex;
     align-items: center;
-    margin:0.5vw;
+    margin:0.5vw 0.5vw 0.5vw 0;
     .logo{
       height:5vw;
       width: 5vw;
@@ -56,6 +60,21 @@ main{
   @include colors($white, $darkblue);
 }
 
+// section{
+//   width: 20%;
+//   @include colors($gray, $white);
+//   padding: 1vw;
+//   margin:0 0 5vw 0;
+//   border: 10px $white solid;
+//   .alert{
+//     border: 10px $red solid;
+//   }
+// }
+
+// .dashboard{
+//   @include flex-width(space-between, 80%);
+// }
+
 .home{
   @include flex-width(center, 80%);
   flex-direction: column;
@@ -65,7 +84,7 @@ main{
     flex-direction: column;
     width: 30%;
     @include colors($gray, $white);
-    margin: 1vw 0;
+    margin: 0 0 2vw 0;
     border: 10px $white solid;
     input, button{
       margin-bottom: 1vw;
@@ -81,7 +100,11 @@ main{
     }
   }
   .description{
-    width:80%;
+    width:100%;
+    @include colors($gray, $white);
+    padding: 1vw;
+    margin:0 0 5vw 0;
+    border: 10px $white solid;
   }
 }
 
@@ -91,7 +114,7 @@ main{
     @include colors($white, $slate);
     width:200px;
     padding: 20px;
-    margin:20px;
+    margin: 2vw 1vw;
     font-size: 20px;
     font-family: 'Roboto Mono', monospace;
     font-weight: bold;
@@ -101,18 +124,3 @@ main{
     }
   }
 }
-
-section{
-  width: 20%;
-  @include colors($gray, $white);
-  padding: 1vw;
-  margin: 2vw 0;
-  border: 10px $white solid;
-  .alert{
-    border: 10px $red solid;
-  }
-}
-
-// .dashboard{
-//   @include flex-width(space-between, 80%);
-// }
