--- a/public/css/sass/main.scss
+++ b/public/css/sass/main.scss
@@ -50,20 +50,29 @@ main{
   @include colors($white, $darkblue);
 }
 
-// section{
-//   width: 20%;
-//   @include colors($gray, $white);
-//   padding: 1vw;
-//   margin:0 0 5vw 0;
-//   border: 10px $white solid;
-//   .alert{
-//     border: 10px $red solid;
-//   }
-// }
+.dashboard{
+  width:80%;
+  h1{
+    font-family: 'Roboto Mono', monospace;
+  }
+}
 
-// .dashboard{
-//   @include flex-width(space-between, 80%);
-// }
+.modules{
+  @include flex-width(space-between, 100%);
+  section{
+    width: 23%;
+    @include colors($gray, $white);
+    padding: 0 1vw;
+    margin:2vw 0 5vw 0;
+    border: 10px $white solid;
+    h2{
+      height:4vw;
+    }
+  }
+  .alert{
+    border: 10px $red solid;
+  }
+}
 
 .home{
   @include flex-width(center, 80%);
