--- a/public/partials/dashboard.html
+++ b/public/partials/dashboard.html
@@ -13,8 +13,16 @@
       <h2>Light:</h2>
       <p>{{data3.value}}</p>
     </section>
+    <section>
+      <h2>Sprinklers:</h2>
+      <p>{{data4.value}}</p>
+    </section>
     <section class="alert">
       <h2>Alerts</h2>
+      <!-- <p ng-show="tempAlert">{{data.fahrenheit}}</p>
+      <p ng-show="doorAlert">Garage Door is {{data2.doors}}</p>
+      <p ng-show="lightAlert">The lights are ON</p>
+      <p ng-show="sprinklerAlert">CHECK SPRINKLERS ALERT!!!</p> -->
     </section>
   </div>
 </div>
