troubleshooting views no longer showing

--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -20,16 +20,16 @@
     <button type="password"> Login </button>
   </form>
 
-  <form ng-show="isSignupOpen" novalidate name="SignupForm" ng-submit='addUser(view.form)'>
+  <form ng-show="isSignupOpen" novalidate name="SignupForm" ng-submit="addUser(username, password, zip, phone)">
     <center>Signup</center>
     <label for="username"> Username </label>
       <input type="text" id="username" ng-model="username">
     <label for="password"> Password </label>
       <input type="text" id="password" ng-model="password">
     <label for="zip"> Zip Code </label>
-      <input type="number" id="zip" ng-model="view.form.zip">
+      <input type="number" id="zip" ng-model="zip">
     <label for="phone"> Phone Number </label>
-      <input type="number" id="phone" ng-model='view.form.phone'>
+      <input type="number" id="phone" ng-model='phone'>
     <button type="submit"> Submit </button>
   </form>
 
