reverting to what we had before file restructuring

--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -29,14 +29,13 @@
     <label for="zip"> Zip Code </label>
       <input type="number" id="zip" ng-model="view.form.zip">
     <label for="phone"> Phone Number </label>
-      <input type="number" ng-model='view.form.phone' placeholder="ex: (999)123-4567">
+      <input type="number" ng-model='view.form.phone'>
     <button type="submit"> Submit </button>
   </form>
 
   <section class="description">
     <p>Description of company/app:
-      <br>SmartHome is a home automation app.  Features include the current temperature inside your home and right outside your house, monitors your open doors and includes alerts if you’ve left a door open, and looks to the weather forecast to advise you whether you need to water your lawn based on the upcoming weather forecast.
-
+      SmartHome is a home automation app.  Features include the current temperature inside your home and right outside your house, monitors your open doors and includes alerts if you’ve left a door open, and looks to the weather forecast to advise you whether you need to water your lawn based on the upcoming weather forecast.<br><br>
       On the dashboard, users can see the temperature readings, status of their doors and any alerts.  Users can set a time limit for how long their door can be open before receiving an alert.  This is great for the forgetful person who leaves the garage door open.</p>
   </section>
 
