--- a/public/partials/dashboard.html
+++ b/public/partials/dashboard.html
@@ -3,19 +3,27 @@
   <div class="modules">
     <section>
       <h2>Current Temperature:</h2>
-      <p>{{data.fahrenheit}}</p>
+      <div class="data">
+        <p>{{data.fahrenheit}}°C</p>
+      </div>
     </section>
     <section>
       <h2>Garage Door:</h2>
-      <p>{{data2.doors}}</p>
+      <div class="data">
+        <p>{{data2.doors}}</p>
+      </div>
     </section>
     <section>
       <h2>Light:</h2>
-      <p>{{data3.value}}</p>
+      <div class="data">
+        <p>{{data3.value}}</p>
+      </div>
     </section>
     <section>
       <h2>Sprinklers:</h2>
-      <p>{{data4.value}}</p>
+      <div class="data">
+        <p>{{data4.value}}</p>
+      </div>
     </section>
     <section class="alert">
       <h2>Alerts</h2>
