--- a/public/css/main.css
+++ b/public/css/main.css
@@ -11,7 +11,7 @@ header {
   width: auto;
   color: auto;
   background-color: #fafafa;
-  border-bottom: #30638e 20px solid;
+  border-bottom: solid #edae49 5px;
   padding-bottom: 0.5vw;
   font-family: 'Roboto Mono', monospace; }
 
@@ -43,12 +43,14 @@ main {
   justify-content: center;
   width: auto;
   color: #fafafa;
-  background-color: #072638; }
+  background-color: #072638;
+  border-top: #30638e 20px solid; }
 
 .dashboard {
   width: 80%; }
   .dashboard h1 {
-    font-family: 'Roboto Mono', monospace; }
+    font-family: 'Roboto Mono', monospace;
+    margin-top: 2vw; }
 
 .modules {
   display: flex;
@@ -59,13 +61,23 @@ main {
     width: 23%;
     color: #2e3e42;
     background-color: #fafafa;
-    padding: 0 1vw;
-    margin: 2vw 0 5vw 0;
-    border: 10px #fafafa solid; }
-    .modules section h2 {
-      height: 4vw; }
+    padding: 1vw;
+    margin: 1vw 0 1vw 0;
+    border: 5px #edae49 solid;
+    border-radius: 3px; }
   .modules .alert {
     border: 10px #d13a4e solid; }
+
+.data {
+  display: flex;
+  justify-content: justify-content;
+  width: 100%; }
+  .data p {
+    font-size: 4vw;
+    font-family: 'Roboto Mono', monospace;
+    margin: auto;
+    padding: 1vw;
+    color: #36bcd0; }
 
 .home {
   display: flex;
@@ -80,15 +92,18 @@ main {
     color: #2e3e42;
     background-color: #fafafa;
     margin: 0 0 2vw 0;
-    border: 10px #fafafa solid; }
+    border: 10px #fafafa solid;
+    border-radius: 3px; }
     .home form input, .home form button {
-      margin-bottom: 1vw; }
+      margin-bottom: 1vw;
+      border-radius: 3px; }
     .home form button {
       color: #fafafa;
       background-color: #30638e;
       font-weight: bold;
       border: 0;
-      padding: .5vw; }
+      padding: .5vw;
+      border-radius: 3px; }
       .home form button:hover {
         color: black;
         background-color: #36bcd0; }
@@ -98,7 +113,8 @@ main {
     background-color: #fafafa;
     padding: 1vw;
     margin: 0 0 5vw 0;
-    border: 10px #fafafa solid; }
+    border: 5px #edae49 solid;
+    border-radius: 3px; }
 
 .btns {
   display: flex;
@@ -113,7 +129,8 @@ main {
     font-size: 20px;
     font-family: 'Roboto Mono', monospace;
     font-weight: bold;
-    border: 0; }
+    border: 0;
+    border-radius: 3px; }
     .btns .bigbtn:hover {
       color: black;
       background-color: #36bcd0; }
