--- a/public/css/sass/main.scss
+++ b/public/css/sass/main.scss
@@ -1,6 +1,7 @@
 @import "mixins";
 @import "colors";
 @import "font";
+@import "classes";
 
 *{
   box-sizing: border-box;
@@ -63,13 +64,15 @@ main{
   @include flex-width(space-between, 100%);
   flex-wrap: wrap;
   section{
-    // min-width: 23%;
-    width:23%;
+    width: 16rem;
     @include colors($gray, $white);
+    @extend .card;
     padding: 1vw;
-    margin:1vw 0 1vw 0;
-    border: 5px $yellow solid;
-    border-radius: 3px;
+    margin:1vw 1vw 1vw 0;
+    h2{
+      font-size: 2rem;
+      color:$darkblue;
+    }
   }
   .alert{
     border: 10px $red solid;
@@ -120,8 +123,7 @@ main{
     @include colors($gray, $white);
     padding: 1vw;
     margin:0 0 5vw 0;
-    border: 5px $yellow solid;
-    border-radius: 3px;
+    @extend .card;
   }
 }
 
@@ -141,12 +143,4 @@ main{
       @include colors(black, $lightblue);
     }
   }
-}
-
-.blue {
-  color: $lightblue;
-}
-
-.red {
-  color: $red;
 }
