--- a/public/partials/dashboard.html
+++ b/public/partials/dashboard.html
@@ -2,7 +2,7 @@
   <h1>Hello, {name}</h1>
   <div class="modules">
     <section>
-      <h2>Current Temperature:</h2>
+      <h2>Temperature:</h2>
       <div class="data">
         <p>{{data.fahrenheit}}°C</p>
       </div>
@@ -28,5 +28,6 @@
     <section class="alert">
       <h2>Alerts</h2>
     </section>
+    {{weatherData}}
   </div>
 </div>
