--- a/public/css/main.css
+++ b/public/css/main.css
@@ -76,10 +76,17 @@ main {
     background-color: #fafafa;
     width: 17rem;
     padding: 1vw;
-    margin: 1vw 0 .5vw 0; }
-    .modules section h2 {
-      font-size: 2rem;
-      color: #072638; }
+    margin: 1vw 0 1vw 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
+    .modules section h2, .modules section h4 {
+      font-size: 1.5rem;
+      color: #30638e;
+      margin-top: .5vw; }
+
+i {
+  color: #edae49; }
 
 .alert {
   color: #072638;
@@ -109,7 +116,7 @@ main {
     font-family: sans-serif;
     font-size: 1vw;
     padding: 0;
-    color: #072638; }
+    color: #30638e; }
   .data button {
     font-weight: normal;
     outline: none; }
@@ -119,8 +126,7 @@ main {
   justify-content: space-between;
   width: 100%;
   padding: 0;
-  border-radius: 3px;
-  margin: 1.5vw 0; }
+  border-radius: 3px; }
   .weather .days {
     color: #072638;
     background-color: #fafafa;
