--- a/public/css/sass/main.scss
+++ b/public/css/sass/main.scss
@@ -67,12 +67,20 @@ main{
     @extend .card;
     width: 17rem;
     padding: 1vw;
-    margin:1vw 0 .5vw 0;
-    h2{
-      font-size: 2rem;
-      color:$darkblue;
+    margin:1vw 0 1vw 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    h2, h4{
+      font-size: 1.5rem;
+      color:$slate;
+      margin-top: .5vw;
     }
   }
+}
+
+i{
+  color: $yellow;
 }
 
 .alert{
@@ -104,7 +112,7 @@ main{
     font-family: sans-serif;
     font-size:1vw;
     padding: 0;
-    color: $darkblue;
+    color: $slate;
   }
   button{
     @extend .btn;
@@ -117,7 +125,6 @@ main{
   @include flex-width(space-between, 100%);
   padding:0;
   border-radius: 3px;
-  margin:1.5vw 0;
   .days{
     @extend .card;
     @include colors($darkblue, $white);
