update readme file and description

--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -32,8 +32,14 @@
   </form>
 
   <section class="description">
-    <p>SmartHome is a home automation app.  Features include the current temperature inside your home and right outside your house, monitors your open doors, includes alerts if you’ve left a door open, and looks to the weather forecast to advise you whether you need to water your lawn based on the upcoming weather forecast.<br><br>
-    On the dashboard, users can see the temperature readings, status of their doors and any alerts.  Users can set a time limit for how long their door can be open before receiving an alert.  This is great for the forgetful person who leaves the garage door open.</p>
+    <p>SmartHome is a home automation app. Features include current temperature
+       inside or outside your home, room light status, monitoring open doors, and
+       recommendation on whether you should water your lawn or garden based on the
+       local weather forecast. <br><br>
+       On the personal dashboard, users can see the temperature readings, status of
+       their doors, sprinkler system advice, motion light status, and weather
+       forecast for the week.
+    </p>
   </section>
 
 </div>
