add video to home view

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -186,4 +186,7 @@ i {
       color: black;
       background-color: #36bcd0; }
 
+iframe {
+  margin-top: 2vw; }
+
 /*# sourceMappingURL=main.css.map */
