--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -1,5 +1,7 @@
 <div class="home">
 
+<iframe width="600" height="315" src="https://www.youtube.com/embed/0VQmFPolMc0" frameborder="0" allowfullscreen></iframe>
+
   <div class="btns">
     <button class="bigbtn notSelected"
       ng-click="isLoginOpen = !isLoginOpen; isSignupOpen = false">
