--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -1,4 +1,4 @@
-<div class="home">
+<div class="landing">
 
 <iframe width="600" height="315" src="https://www.youtube.com/embed/0VQmFPolMc0" frameborder="0" allowfullscreen></iframe>
 
